salesforce-main/src/main/default/objects/Digital_Content__c/Digital_Content__c.object-meta.xml
<CustomObject>
    <label>Digital Content</label>
    <nameField>
        <displayFormat>DC-{00000}</displayFormat>
        <label>Digital Content Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Digital Content</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>