salesforce-main/src/main/default/objects/Digital_Content__c/fields/Host_System__c.field-meta.xml
<CustomField>
    <fullName>Host_System__c</fullName>
    <label>Host System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CenturyTech</fullName>
            </value>
            <value>
                <fullName>Totara</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>