salesforce-main/src/main/default/objects/Digital_Content__c/fields/Programme__c.field-meta.xml
<CustomField>
    <fullName>Programme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Programme</label>
    <referenceTo>Programme__c</referenceTo>
    <relationshipLabel>Digital Content</relationshipLabel>
    <relationshipName>Digital_Content</relationshipName>
    <type>Lookup</type>
</CustomField>