salesforce-main/src/main/default/objects/Digital_Content__c/fields/System_Reference__c.field-meta.xml
<CustomField>
    <fullName>System_Reference__c</fullName>
    <label>System Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>